<resources>
    <string name="app_name">Nidoqueue</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome!</string>
    <string name="click_here">(Click Here)</string>
    <string name="new_device">New device and already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="done">Done</string>
    <string name="username">Username</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="username_label">Username:</string>
    <string name="email">user@example.com</string>
    <string name="phone">123-456-7890</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone# (Optional)</string>
    <string name="send">Send</string>
    <string name="enter_email">Enter Email</string>
    <string name="recovery">Recovery</string>
    <string name="enter_email_label">Enter your registered email address</string>
    <string name="code_sent_label">(A code will be sent to your email, enter it at the next step)</string>
    <string name="welcome_user">Welcome User</string>
    <string name="subscribed_experiments">Subscribed Experiments</string>
    <string name="created_experiments">Created Experiments</string>
    <string name="search_trials">Search Trials</string>
    <string name="search_results">Search Results</string>
    <string name="experiment_name">Experiment A</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="user013">User013</string>
    <string name="experiment_data">Experiment Data</string>
    <string name="forum">Forum</string>
    <string name="add_question">Add Question</string>
    <string name="post">Post</string>
    <string name="question_1">Question 1</string>
    <string name="add_reply">Add Reply</string>
    <string name="measurement">Measurement</string>
    <string name="qr">QR</string>
    <string name="count_based">Count Based</string>
    <string name="non_negative">Non-Negative</string>
    <string name="options_button">Options Button</string>
    <string name="enter_question_here">Enter Question Here</string>
    <string name="enter_reply_here">Enter Reply Here</string>
    <string name="binomial_title">Binomial</string>
    <string name="type"><![CDATA[<Type>]]></string>
    <string name="name"><![CDATA[<Name>]]></string>
    <string name="ignore">Ignore</string>
    <string name="sort_by">Sort by:</string>
    <string name="sample_time">12:42pm</string>
    <string name="sample_date">01/12/03</string>
    <string name="sample_user">User03</string>
    <string name="experiment">Experiment</string>
    <string name="inactive">Inactive</string>
    <string name="sample_description">Sample Description</string>
    <string name="user_profile_text">User Profile</string>
    <string name="phone_optional">Phone# (Optional):</string>
    <string name="username_hint">Username:</string>
    <string name="email_hint">Email:</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="email_display">Email</string>
    <string name="phone_display">Phone Number</string>
    <string name="username_display">Username</string>
    <string name="profile_button">profile button</string>
    <string name="name_expData">Name</string>
    <string name="description_expData">Description</string>
    <string name="region_expData">Region</string>
    <string name="trial_expData">Trial #</string>
    <string name="geo_location_expData">Geo-Location</string>
    <string name="status_expData">Status</string>
    <string name="password">Password:</string>
    <string name="re_enter_password">Re-enter Password:</string>
    <string name="user_profile">User Profile</string>
    <string name="enable_geolocation">Enable GeoLocation</string>
    <string name="unpublish_button">Unpublish</string>
    <string name="end_button">End Experiment</string>
    <string name="data_button">Data</string>
    <string name="qa_button">QA</string>
    <string name="record_button">Record</string>
    <string name="view_results">View Results</string>
    <string name="search">Search</string>
    <string name="claer">Clear</string>
    <string name="trials">Trials</string>
    <string name="measurement_button">Measurement</string>
    <string name="count_button">Count</string>
    <string name="binomial__button">Binomial</string>
    <string name="non_negative__button">Non-Negative</string>


</resources>