<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/exp_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="@font/exo"
        android:padding="10dp"
        android:text="@string/name_expData"
        android:textColor="@color/Nido_Blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/exp_list_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="@font/exo"
        android:padding="10dp"
        android:text="@string/description_expData"
        android:textColor="@color/Nido_Blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/exp_list_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="@font/exo"
        android:padding="10dp"
        android:text="@string/region_expData"
        android:textColor="@color/Nido_Blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/exp_list_trials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="@font/exo"
        android:padding="10dp"
        android:text="@string/trial_expData"
        android:textColor="@color/Nido_Blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/exp_list_geolocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="@font/exo"
        android:padding="10dp"
        android:text="@string/geo_location_expData"
        android:textColor="@color/Nido_Blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/exp_list_published"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="@font/exo"
        android:padding="10dp"
        android:text="@string/status_expData"
        android:textColor="@color/Nido_Blue"
        android:textSize="20sp" />
</LinearLayout>