<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/username_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo"
        android:padding="10dp"
        android:textColor="@color/Nido_Blue"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/email_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo"
        android:padding="10dp"
        android:textColor="@color/Nido_Blue"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/password_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo"
        android:padding="10dp"
        android:textColor="@color/Nido_Blue"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/password_re_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo"
        android:padding="10dp"
        android:textColor="@color/Nido_Blue"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />
</LinearLayout>