<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#80D9FF"
    tools:context=".activity.SearchActivity">

    <ImageButton
        android:id="@+id/search_button2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#80D9FF"
        android:contentDescription="@string/back_arrow"
        android:tint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <TextView
        android:id="@+id/search_results_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/exo"
        android:text="@string/search_results"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_button3"
        app:layout_constraintEnd_toStartOf="@+id/search_button2"
        app:layout_constraintStart_toEndOf="@+id/back_button3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_result"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/sort_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_results_label" />

    <ImageButton
        android:id="@+id/back_button3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#80D9FF"
        android:contentDescription="@string/back_arrow"
        android:tint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <Button
        android:id="@+id/sort_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo"
        android:text="@string/type"
        android:textColor="#80D9FF"
        android:textSize="20sp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/sort_by"
        app:layout_constraintEnd_toEndOf="@+id/search_result" />

    <TextView
        android:id="@+id/sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:fontFamily="@font/exo"
        android:text="@string/sort_by"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/search_result" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/exo"
        android:text="@string/claer"
        android:textColor="#80D9FF"
        android:textSize="20sp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/sort_type"
        app:layout_constraintStart_toStartOf="@+id/sort_type"
        app:layout_constraintTop_toBottomOf="@+id/sort_type" />


</androidx.constraintlayout.widget.ConstraintLayout>